--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
-      </button> 
+      </button>
       <a class="navbar-brand" href="#"> <i class="fa fa-fw fa-stack-exchange"> </i> </a>
 
     </div>
 <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">About Me <span class="sr-only">(current)</span></a></li>
+        <li class="active"><a href="aboutme.html">About Me <span class="sr-only">(current)</span></a></li>
         <li><a href="gallery.html">  Gallery</a></li>
-       
+
       </ul>
       <form class="navbar-form navbar-left" role="search">
     </div><!-- /.navbar-collapse -->
