--- a/aboutme.html
+++ b/aboutme.html
@@ -1,1 +1,34 @@
-
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Julio De La Vega | About Me</title>
+		<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+		<link rel="stylesheet" type="text/css" href="style.css">
+	</head>
+	<body>
+		<!--Navagation Bar-->
+		<nav class="navbar navbar-inverse navbar-fixed-top">
+		  <div class="container-fluid">
+		    <!-- Brand and toggle get grouped for better mobile display -->
+		    <div class="navbar-header">
+		      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+		        <span class="sr-only">Toggle navigation</span>
+		        <span class="icon-bar"></span>
+		        <span class="icon-bar"></span>
+		        <span class="icon-bar"></span>
+		      </button>
+		      <a class="navbar-brand" href="#"><i class="fa fa-fw fa-stack-exchange"></i></a>
+		    </div>
+				<!-- Collect the nav links, forms, and other content for toggling -->
+		    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+		      <ul class="nav navbar-nav">
+		        <li class="active"><a href="aboutme.html">About Me<span class="sr-only">(current)</span></a></li>
+		        <li><a href="gallery.html">Gallery</a></li>
+		      </ul>
+		      <form class="navbar-form navbar-left" role="search">
+		    </div><!-- /.navbar-collapse -->
+				<h1>About Me</h1>
+		  </div><!-- /.container-fluid -->
+		</nav>
+	</body>
+</html>
