--- a/aboutme.html
+++ b/aboutme.html
@@ -27,8 +27,10 @@
 		      </ul>
 		      <form class="navbar-form navbar-left" role="search">
 		    </div><!-- /.navbar-collapse -->
-				<h1>About Me</h1>
 		  </div><!-- /.container-fluid -->
 		</nav>
+		<div class="container-fluid">
+			<h1>About Me</h1>
+		</div>
 	</body>
 </html>
