--- a/aboutme.html
+++ b/aboutme.html
@@ -30,7 +30,9 @@
 		  </div><!-- /.container-fluid -->
 		</nav>
 		<div class="container-fluid">
-			<h1>About Me</h1>
+			<div class="col-lg-12">
+				<h1 class="page-header">About Me</h1>
+			</div>
 		</div>
 	</body>
 </html>
