--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="aboutme.html">About Me<span class="sr-only">(current)</span></a></li>
+            <li class="active"><a href="index.html">Main<span class="sr-only">(current)</span></a></li>
+            <li><a href="aboutme.html">About Me</a></li>
             <li><a href="gallery.html">Gallery</a></li>
           </ul>
           <form class="navbar-form navbar-left" role="search">
