added sticky bootstrap panel on the bottom of index.html

--- a/index.html
+++ b/index.html
@@ -61,6 +61,11 @@
       </a>
     </div>
     <img id="banner" src="images/black.jpg" alt="Banner Image"/>
+    <div class="panel panel-success verified">
+      <div class="panel-heading">
+        <h3 class="panel-title">Verified By: Albert Bahia<i class="glyphicon glyphicon-menu-up verified-menu-up"></i></h3>
+      </div>
+    </div>
     <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"crossorigin="anonymous"></script>
   </body>
