added Bootstrap popover for certification

--- a/index.html
+++ b/index.html
@@ -61,19 +61,10 @@
       </a>
     </div>
     <img id="banner" src="images/black.jpg" alt="Banner Image"/>
-    <div class="panel panel-success verified">
-      <div class="panel-heading" data-toggle="popover" data-content="Works" placement="top">
-        <h3 class="panel-title">Verified By: Albert Bahia<i class="glyphicon glyphicon-menu-up verified-menu-up"></i></h3>
-      </div>
-      <div class="panel-body verified-body">
-        <a href="https://github.com/albertbahia"><img class="img-thumbnail verified-body-img" src="https://avatars0.githubusercontent.com/u/5618678?v=3&s=460" alt="https://community.teamdynamix.com/Images/GenericUser.png" /></a>
-        <div class="verified-body-info">
-          <p id="verified-name">Name: Albert Bahia</p>
-          <p id="verified-github-name">Github Username: albertbahia</p>
-        </div>
-      </div>
+    <button type="button" class="btn btn-success button-label" data-toggle="popover">Verified By: Albert Bahia (click for info)<i class="glyphicon glyphicon-menu-up verified-menu-up"></i></button>
     </div>
     <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="js/portfolio.js"></script>
   </body>
 </html>
