--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
   	<title>Julio De La Vega</title>
   	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-  	<link rel="stylesheet" type="text/css" href="style.css">
+  	<link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
   <body>
     <!--Navagation Bar-->
